[package]
name = "restop_cli"
version = "0.1.0"
authors = ["DeltaManiac <maxpaynered@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap= "3.0.0-beta.4"
restop_lib = { path = "../restop_lib"}
anyhow= "1.0.43"
human-panic = "1.0.3"
log = "0.4.14"
env_logger="0.9.0"
colored = "2.0.0"